@@ -42,7 +42,7 @@ include $(APPDIR)/Make.defs
 ASRCS  =
 CSRCS  = nsh_init.c nsh_parse.c nsh_console.c nsh_script.c
 CSRCS += nsh_command.c nsh_fscmds.c nsh_ddcmd.c nsh_proccmds.c nsh_mmcmds.c
-CSRCS += nsh_timcmds.c nsh_envcmds.c nsh_dbgcmds.c
+CSRCS += nsh_timcmds.c nsh_envcmds.c nsh_syscmds.c nsh_dbgcmds.c
 
 ifeq ($(CONFIG_NFILE_STREAMS),0)
 CSRCS += nsh_stdsession.c
