@@ -1327,3 +1327,6 @@
 	* The apps/ directory has been removed from the NuttX GIT repository
 	  and now stands alone in its own repository (2015-06-27).
 	* apps/examples/poll: Fix a few bit-rot compilation errors (2015-07-01).
+	* apps/nshlib: NSH will now support an (optional) shutdown command if
+	  the board provides the option CONFIG_BOARD_POWEROFF (2015-07-04).
+
